# QuillAI

./: .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-AGPL-3.0  README.md  SECURITY.md  release-please-config.json
core/quill/: AGENTS.md  CHANGELOG.md  README.md  justfile  pyproject.toml  quill_project.yml  relationships.yml
core/quill-core/: .dockerignore  CHANGELOG.md  Cargo.toml  README.md
core/quill-core-base/: CHANGELOG.md  Cargo.toml  README.md
core/quill-core-base/.claude/: CLAUDE.md
core/quill-core-base/manifest-macro/: CHANGELOG.md  Cargo.toml  README.md
core/quill-core-base/manifest-macro/src/: lib.rs
core/quill-core-base/src/mdl/: builder.rs  manifest.rs  migration.rs
core/quill-core-py/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
core/quill-core-py/.claude/: CLAUDE.md
core/quill-core-py/scripts/: publish.sh
core/quill-core-py/src/: context.rs  cube.rs  errors.rs  extractor.rs  lib.rs  manifest.rs  remote_functions.rs  validation.rs
core/quill-core-py/tests/: test_cube.py  test_modeling_core.py
core/quill-core/.claude/: CLAUDE.md
core/quill-core/benchmarks/: Cargo.toml  README.md  bench.sh
core/quill-core/benchmarks/mdls/: q1.json
core/quill-core/benchmarks/queries/: q1.sql  q2.sql
core/quill-core/benchmarks/src/: lib.rs
core/quill-core/benchmarks/src/quill/: mod.rs  run.rs
core/quill-core/benchmarks/src/tpch/: mod.rs  run.rs
core/quill-core/core/: Cargo.toml  README.md
core/quill-core/core/src/: lib.rs
core/quill-core/core/src/logical_plan/: error.rs  utils.rs
core/quill-core/core/src/mdl/: context.rs  cube.rs  lineage.rs  mod.rs  type_planner.rs  utils.rs
core/quill-core/quill-example/: Cargo.toml  README.md
core/quill-core/quill-example/examples/: calculation-invoke-calculation.rs  datafusion-apply.rs  plan-sql.rs  row-level-access-control.rs  to-many-calculation.rs  view.rs
core/quill-core/sqllogictest/: Cargo.toml
core/quill-core/sqllogictest/src/: test_context.rs
core/quill-core/sqllogictest/test_files/: model.slt  view.slt
core/quill/.claude/: CLAUDE.md
core/quill/docs/: cli.md  connections.md
core/quill/knowledge/rules/: general.md
core/quill/models/customers/: metadata.yml
core/quill/models/orders/: metadata.yml
core/quill/scripts/: publish.sh
core/quill/src/quill/: __init__.py  ask.py  ask_cli.py  cli.py  config.py  context.py  context_cli.py  cube_cli.py  dbt.py  docs.py  docs_cli.py  engine.py  mcp_server.py  osi.py  policy.py  profile.py  profile_cli.py  profile_web.py  serve_cli.py  skills_cli.py  skills_delivery.py  type_mapping.py  utils_cli.py
core/quill/src/quill/ask_templates/: direct.md.tmpl  guided.md.tmpl
core/quill/src/quill/connector/: __init__.py  athena.py  bigquery.py  clickhouse.py  databricks.py  datafusion.py  duckdb.py  factory.py  mssql.py  mysql.py  oracle.py  postgres.py  quill.py  redshift.py  snowflake.py  spark.py  trino.py
core/quill/src/quill/genbi/: cli.py  composer.py  index.py  tokens.py  verify.py
core/quill/src/quill/mdl/: __init__.py  cte_rewriter.py  quill_dialect.py
core/quill/tests/: conftest.py  test_cli_memory_detection.py  test_field_registry.py  test_profile.py  test_profile_cli.py  test_profile_web.py
core/quill/tests/connectors/: test_clickhouse.py  test_datafusion.py  test_duckdb.py  test_mssql.py  test_mysql.py  test_mysql_connector.py  test_postgres.py  test_quill.py  test_snowflake.py  test_trino.py
core/quill/tests/suite/: manifests.py  query.py  test_ref_sql.py
core/quill/tests/unit/: test_ask_cli.py  test_athena_connector.py  test_athena_limit_pushdown.py  test_athena_semicolon.py  test_case_sensitivity.py  test_cli_profile_resolve.py  test_cli_store_tip.py  test_clickhouse_helpers.py  test_clickhouse_url.py  test_config.py  test_connector_factory.py  test_context.py  test_context_cli.py  test_convert_mdl.py  test_cte_rewriter.py  test_cube_cli.py  test_databricks_connector.py  test_databricks_semicolon.py  test_datafusion_semicolon.py  test_dbt.py  test_duckdb_file_listing.py  test_engine.py  test_genbi_build.py  test_genbi_deploy.py  test_genbi_index.py  test_genbi_verify.py  test_index_backend.py  test_mcp_server.py  test_memory.py  test_memory_markdown.py  test_memory_watch.py  test_mssql_connection.py  test_mysql_helpers.py  test_oracle_semicolon.py  test_oracle_url_decode.py  test_osi.py  test_policy.py  test_profile_env_expansion.py  test_redshift_semicolon.py  test_seed_queries.py  (+10 more)
sdk/quill-langchain/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdk/quill-langchain/examples/: langchain_demo.py  langgraph_demo.py
sdk/quill-langchain/src/quill_langchain/: __init__.py  _envelope.py  _format.py  _memory_api.py  _prompt.py  _toolkit.py  _tools.py  _tools_memory.py  exceptions.py
sdk/quill-langchain/tests/: conftest.py
sdk/quill-langchain/tests/conformance/: test_langchain_contract.py
sdk/quill-langchain/tests/integration/: conftest.py  test_langgraph_toolnode.py  test_memory_tools.py  test_runtime_tools.py
sdk/quill-langchain/tests/unit/: test_envelope.py  test_exceptions.py  test_memory_api.py  test_prompt.py  test_providers_connection.py  test_providers_mdl.py  test_providers_memory.py  test_toolkit_init.py  test_toolkit_runtime.py  test_tools_memory.py  test_tools_runtime.py
sdk/quill-pydantic/: CHANGELOG.md  README.md  pyproject.toml
sdk/quill-pydantic/examples/: pydantic_ai_demo.py  pydantic_ai_structured_demo.py
sdk/quill-pydantic/src/quill_pydantic/: __init__.py  _errors.py  _instructions.py  _memory_api.py  _models.py  _toolkit.py  _tools.py  _tools_memory.py  exceptions.py
sdk/quill-pydantic/tests/: conftest.py  test_smoke.py
sdk/quill-pydantic/tests/conformance/: test_pydantic_ai_contract.py
sdk/quill-pydantic/tests/unit/: test_errors.py  test_exceptions.py  test_instructions.py  test_memory_api.py  test_models.py  test_providers_connection.py  test_providers_mdl.py  test_providers_memory.py  test_toolkit_init.py  test_toolkit_runtime.py  test_tools_memory.py  test_tools_runtime.py  test_toolset_facade.py
skills/: README.md  (+4 more)
(+201 files in other folders)
