[package]
name = "quill-core-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Quill Engine semantic layer (quill-core)"
license = "Apache-2.0"
repository = "https://github.com/omen18/Quill"
include = ["/src", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[lib]
name = "quill_core_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py311"] }
quill-core = { path = "../quill-core/core", package = "quill-semantic-core" }
quill-core-base = { path = "../quill-core-base", features = ["python-binding"] }
datafusion-common = "53.0.0"
base64 = "0.22.1"
serde_json = "1.0.117"
thiserror = "2.0.3"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tokio = "1.46.0"

[dev-dependencies]
rstest = "0.23.0"

[build-dependencies]
pyo3-build-config = "0.29.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
