[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quill"
version = "0.13.0"
description = "Quill CLI and Python SDK — semantic SQL layer for 20+ data sources"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Yash Raj Sharan" }]
keywords = ["quill", "sql", "semantic", "semantic-layer", "mdl", "datafusion", "data-modeling", "analytics", "database", "cli", "sdk", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "quill-core-py>=0.7.1",
  "duckdb>=1.5.4",
  # >=29 required: the CTE rewriter and policy read the ``with_`` / ``from_``
  # Expression arg keys, which sqlglot renamed from ``with`` / ``from`` in 28.
  "sqlglot>=30.12.0",
  "typer>=0.27.0",
  "pydantic>=2.13.4",
  "pyarrow>=25.0.0",
  "pyarrow-hotfix>=0.7",
  "loguru>=0.7.3",
  "opendal>=0.47.3",
  "pandas>=3.0.3",
  "boto3>=1.43.51",
  "pyyaml>=6.0.3",
  # Reads `.env` files so profile values like `password: ${POSTGRES_PASSWORD}`
  # resolve at connection time without the secret living in profiles.yml.
  "python-dotenv>=1.2.2",
  # Transitive dependency constraints for security patches
  "requests>=2.34.2",
  "pyasn1>=0.6.4",
  "pyopenssl>=26.3.0",
  "urllib3>=2.7.0",
  "lxml>=6.1.1",
  "cryptography>=49.0.0",
  "pygments>=2.20.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.3.4"]
mysql = ["mysqlclient>=2.2.8"]
bigquery = ["google-cloud-bigquery>=3.42.2,<4", "google-auth"]
snowflake = ["snowflake-connector-python[pandas]>=4.7.1"]
clickhouse = ["clickhouse-connect>=1.5.0"]
trino = ["trino>=0.338.0,<1"]
mssql = ["pyodbc>=5.3.0,<6"]
databricks = ["databricks-sql-connector", "databricks-sdk"]
redshift = ["redshift_connector"]
spark = ["pyspark>=4.2.0"]
athena = ["pyathena[pandas]>=3.35.2"]
oracle = ["oracledb>=4.0.2"]
memory = ["lancedb>=0.34.0", "sentence-transformers>=5.6.0"]
interactive = ["InquirerPy>=0.3.4"]
ui = ["starlette>=1.3.1", "uvicorn>=0.51.0", "jinja2>=3.1.6", "python-multipart>=0.0.32"]
mcp = ["mcp[cli]>=1.28.1"]
main = ["quill[interactive,ui]"]
all = [
  "quill[postgres,mysql,bigquery,snowflake,clickhouse,trino,mssql,databricks,redshift,athena,oracle,spark,main,memory,mcp]",
]

[project.scripts]
quill = "quill.cli:app"

[project.urls]
Homepage = "https://github.com/omen18/QuillAI"
Repository = "https://github.com/omen18/QuillAI"
Issues = "https://github.com/omen18/QuillAI/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quill"]
artifacts = [
    "src/quill/templates/*.html",
    "src/quill/skills_content/**/*.md",
    "src/quill/skills_content/**/*.py",
    "src/quill/ask_templates/*.tmpl",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PLC"]
ignore = [
  "E501", # line-too-long, enforced by ruff format
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "orjson>=3.11.9",
    "testcontainers[postgres,mysql]>=4.14.2",
    "httpx>=0.28.1",
    "duckdb>=1.5.4",
]

[tool.uv.sources]
quill-core-py = { path = "../quill-core-py" }

