[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quill-langchain"
version = "0.2.0"
description = "LangChain and LangGraph integration for Quill Core — attach a CLI-prepared Quill project to your agent in three lines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Quill", email = "yashrajsharan@gmail.com" }]
keywords = [
  "quill", "quill", "langchain", "langgraph", "agent", "ai-agent",
  "sql", "context-layer", "semantic", "mdl", "data-modeling", "analytics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # Core: provides QuillEngine, MemoryStore, profile resolution, MDL handling.
  "quill>=0.7.0",
  # langchain >=1.0 ships the recommended `langchain.agents.create_agent`
  # entrypoint. Older `langgraph.prebuilt.create_react_agent` still works
  # but emits deprecation warnings and is scheduled for removal in
  # langgraph 2.0.
  "langchain>=1.0",
  "langchain-core>=0.3",
  "langgraph>=1.0",
  "pydantic>=2",
]

[project.optional-dependencies]
# ── Datasource pass-through extras ────────────────────────────────────────
# Pick the one matching your project's `data_source` (in quill_project.yml).
# These chain through to the matching `quill[<datasource>]` extra so
# you don't have to install the connector dependency twice.
#
#   pip install "quill-langchain[mysql]"
#   pip install "quill-langchain[mysql,memory]"
#
# DuckDB is built into quill — no extra needed.
postgres   = ["quill[postgres]>=0.7.0"]
mysql      = ["quill[mysql]>=0.7.0"]
bigquery   = ["quill[bigquery]>=0.7.0"]
snowflake  = ["quill[snowflake]>=0.7.0"]
clickhouse = ["quill[clickhouse]>=0.7.0"]
trino      = ["quill[trino]>=0.7.0"]
mssql      = ["quill[mssql]>=0.7.0"]
databricks = ["quill[databricks]>=0.7.0"]
redshift   = ["quill[redshift]>=0.7.0"]
spark      = ["quill[spark]>=0.7.0"]
athena     = ["quill[athena]>=0.7.0"]
oracle     = ["quill[oracle]>=0.7.0"]

# ── Memory extra ──────────────────────────────────────────────────────────
# Required to use the three memory tools (quill_fetch_context,
# quill_recall_queries, quill_store_query). Pulls in LanceDB and the
# sentence-transformer model deps via quill.
#
# Without this, the toolkit auto-detects no memory and exposes only the
# three runtime tools.
memory = ["quill[memory]>=0.7.0"]

# ── Convenience aggregate ─────────────────────────────────────────────────
# Installs every datasource + memory at once. Useful for CI / examples,
# heavyweight for production where you usually want only one datasource.
all = ["quill[all]>=0.7.0"]

# ── Dev / test deps ───────────────────────────────────────────────────────
dev = [
  "pytest>=8",
  "pytest-mock>=3",
  "ruff>=0.4",
  # Tests run real DuckDB + LanceDB integrations, so memory deps are required.
  "quill[memory]>=0.7.0",
]

[project.urls]
Homepage      = "https://github.com/omen18/Quill"
Documentation = "https://github.com/omen18/Quill/tree/main/sdk/quill-langchain#readme"
Repository    = "https://github.com/omen18/Quill"
Issues        = "https://github.com/omen18/Quill/issues"
Changelog     = "https://github.com/omen18/Quill/blob/main/sdk/quill-langchain/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/quill_langchain"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PLC"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Default run skips tests marked `slow` (currently the LanceDB integration
# tests which load a sentence-transformer model, ~30-40s). Run them explicitly
# with `pytest -m slow` or `pytest -m "slow or not slow"` for everything.
addopts = "-ra -m \"not slow\""
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Suppress deprecation warnings emitted by langgraph's own internal imports.
# These are not from our code — they fire when `from langgraph.prebuilt import
# ToolNode` triggers langgraph's package init. We cannot fix them upstream-side
# and do not use the deprecated APIs ourselves. Review quarterly per
# sdk/MAINTENANCE.md §3.
filterwarnings = [
  "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
  "ignore:AgentStatePydantic has been moved",
]
