[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quill-pydantic"
version = "0.2.0"
description = "Pydantic AI integration for Quill Core — attach a CLI-prepared Quill project to your agent in three lines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Quill", email = "yashrajsharan@gmail.com" }]
keywords = [
  "quill", "quill", "pydantic-ai", "pydantic", "agent", "ai-agent",
  "sql", "context-layer", "semantic", "mdl", "data-modeling", "analytics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # Core: provides QuillEngine, MemoryStore, profile resolution, MDL handling.
  "quill>=0.7.0",
  # Pydantic AI v1 is GA. Pin major so breaking changes are an explicit
  # opt-in via CHANGELOG.
  "pydantic-ai>=1.0,<2.0",
  "pydantic>=2",
]

[project.optional-dependencies]
# ── Datasource pass-through extras ────────────────────────────────────────
# Pick the one matching your project's `data_source` (in quill_project.yml).
# These chain through to the matching `quill[<datasource>]` extra so
# you don't have to install the connector dependency twice.
#
#   pip install "quill-pydantic[mysql]"
#   pip install "quill-pydantic[mysql,memory]"
#
# DuckDB is built into quill — no extra needed.
postgres   = ["quill[postgres]>=0.7.0"]
mysql      = ["quill[mysql]>=0.7.0"]
bigquery   = ["quill[bigquery]>=0.7.0"]
snowflake  = ["quill[snowflake]>=0.7.0"]
clickhouse = ["quill[clickhouse]>=0.7.0"]
trino      = ["quill[trino]>=0.7.0"]
mssql      = ["quill[mssql]>=0.7.0"]
databricks = ["quill[databricks]>=0.7.0"]
redshift   = ["quill[redshift]>=0.7.0"]
spark      = ["quill[spark]>=0.7.0"]
athena     = ["quill[athena]>=0.7.0"]
oracle     = ["quill[oracle]>=0.7.0"]

# ── Memory extra ──────────────────────────────────────────────────────────
# Required to use the three memory tools (quill_fetch_context,
# quill_recall_queries, quill_store_query). Pulls in LanceDB and the
# sentence-transformer model deps via quill.
#
# Without this, the toolkit auto-detects no memory and exposes only the
# three runtime tools.
memory = ["quill[memory]>=0.7.0"]

# ── Convenience aggregate ─────────────────────────────────────────────────
# Installs every datasource + memory at once. Useful for CI / examples,
# heavyweight for production where you usually want only one datasource.
all = ["quill[all]>=0.7.0"]

# ── Dev / test deps ───────────────────────────────────────────────────────
dev = [
  "pytest>=8",
  "pytest-mock>=3",
  "ruff>=0.4",
  # Tests run real DuckDB + LanceDB integrations, so memory deps are required.
  "quill[memory]>=0.7.0",
]

[project.urls]
Homepage      = "https://github.com/omen18/QuillAI"
Documentation = "https://github.com/omen18/QuillAI/tree/main/sdk/quill-pydantic#readme"
Repository    = "https://github.com/omen18/QuillAI"
Issues        = "https://github.com/omen18/QuillAI/issues"
Changelog     = "https://github.com/omen18/QuillAI/blob/main/sdk/quill-pydantic/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/quill_pydantic"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PLC"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Default run skips tests marked `slow` (currently the LanceDB integration
# tests which load a sentence-transformer model, ~30-40s). Run them explicitly
# with `pytest -m slow` or `pytest -m "slow or not slow"` for everything.
addopts = "-ra -m \"not slow\""
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
